--- a/frontend/styles/_content.sass
+++ b/frontend/styles/_content.sass
@@ -1,6 +1,7 @@
 .content
   border-left: 1px solid #12BBF3
   border-right: 1px solid #12BBF3
+  min-width: 0
 
 .content-banner
   background: #ff9007
@@ -10,7 +11,7 @@
   margin-bottom: 3em
 
 .content-body
-    padding: 0 9% 
+    padding: 0 9%
     h2
       font-family: "Wavehaus-Bold"
       font-size: 24px
